# audacious

./: .clang-format  .gitignore  .hgignore  .indent.pro  .travis.yml  AUTHORS  COPYING  ChangeLog  Doxyfile  GIT-Access  HACKING  Makefile  Makefile.am  Makefile.in  Mercurial-Access  NEWS  README  TODO  acinclude.m4  aclocal.m4  audacious.1.in  audacious.desktop  audacious.metainfo.xml  audacious.pc.in  audacious.pro  audacious.spec.in  audacious2-gtkui.desktop  audacious2-skinnedui.desktop  audacious2.desktop  audclient.pc.in  audtool.1.in  autogen.sh  buildsys.mk.in  config.h.in  config.h.meson  configure  configure.ac  extra.mk.in  libtool.m4  meson.build  (+6 more)
Input/cdaudio/: Makefile.am  Makefile.in  cddb.c  cddb.h  cdinfo.c  cdinfo.h
Input/mpg123/: Makefile.am  Makefile.in  README  common.c  configure.c  dct64.c  decode_4to1.c  decode_MMX.s  decode_i586.s  dxhead.c  fileinfo.c  getbits.c  http.c  id3.c  id3_frame_url.c  l2tables.h  layer1.c  layer2.c  layer3.c  mpg123.c  mpg123.h  tabinit.c
Input/vorbis/: Makefile.am  Makefile.in  configure.c  fileinfo.c  http.c  http.h  ogg.xpm  vorbis.h
Output/OSS/: Makefile.am  Makefile.in  OSS.c  audio.c  soundcard.h
Output/alsa/: Makefile.am  Makefile.in  init.c
Visualization/libvisual-proxy/: Makefile  Makefile.am  Makefile.in  config_gui.c  lv_bmp_config.c  main.c  main.loT
audacious/: Makefile  Makefile.am  Makefile.in  about.c  about.h  actions-equalizer.h  actions-mainwin.h  actions-playlist.h  audacious.desktop.in  audacious_logo.xpm  beep  build.list  controlsocket.c  controlsocket.h  credits.c  credits.h  debug.h  dnd.h  dock.c  dock.h  effect.c  effect.h  eq_graph.c  eq_graph.h  eq_slider.c  eq_slider.h  equalizer.c  equalizer.h  fft.c  fft.h  fullscreen.c  fullscreen.h  general.c  general.h  genevent.c  genevent.h  getopt.c  getopt.h  getopt1.c  glade.c  (+106 more)
audacious/glade/: Makefile  Makefile.am  Makefile.in  addfiles.glade  fileinfo.glade  fileinfo.xml  fileinfo_popup.glade  newui.glade  prefswin.glade
audacious/images/: Makefile.am  Makefile.in  bmp_eq.xpm  bmp_player.xpm  bmp_playlist.xpm
audacious/newui/: Makefile  newui_window.c  newui_window.h
audacious/platform/: smartinclude.h
audacious/ui/: Makefile  equalizer.ui  mainwin.ui  playlist.ui
audacious/widgets/: Makefile  eq_graph.c  eq_graph.h  eq_slider.c  eq_slider.h  hslider.c  hslider.h  menurow.c  menurow.h  monostereo.h  number.h  pbutton.h  playlist_list.c  playlist_list.h  playlist_slider.c  playlist_slider.h  playstatus.c  playstatus.h  sbutton.c  sbutton.h  skin.c  skin.h  svis.c  svis.h  tbutton.c  tbutton.h  textbox.c  textbox.h  vis.c  vis.h  widget.c  widget.h  widgetcore.h
audtool/: Makefile  Makefile.in  aclocal.m4  audtool.c  audtool.h  config.h.in  configure  configure.ac
audtool/examples/: np-colourful.sh  np.sh
doc/: HACKING  (+4 more)
libaudacious/: Makefile  Makefile.am  Makefile.in  beepctrl.c  beepctrl.h  configdb.h  configdb_gconf.c  configdb_rcfile.c  configdb_xmlfile.c  configfile.c  configfile.h  dirbrowser.c  dirbrowser.h  formatter.c  formatter.h  rcfile.c  rcfile.h  titlestring.c  titlestring.h  urldecode.c  urldecode.h  util.c  util.h  vfs.c  vfs.h  vfs_buffer.c  vfs_buffer.h  vfs_common.c  vfs_gnome.c  vfs_stdio.c  xconvert.c  xconvert.h  xentry.c  xentry.h  xml_document.c  xml_document.h
libaudcore/: Makefile.am  playback.c  playback.h
libvisual/: Makefile.am  Makefile.in  libvisual.h  lv_actor.c  lv_actor.h  lv_audio.c  lv_audio.h  lv_bin.c  lv_bin.h  lv_bmp.c  lv_bmp.h  lv_color.c  lv_color.h  lv_common.h  lv_cpu.c  lv_cpu.h  lv_endianess.h  lv_error.c  lv_error.h  lv_event.c  lv_event.h  lv_fft.c  lv_fft.h  lv_input.c  lv_input.h  lv_keysym.h  lv_libvisual.c  lv_libvisual.h  lv_list.c  lv_list.h  lv_log.c  lv_log.h  lv_mem.c  lv_mem.h  lv_morph.c  lv_morph.h  lv_object.c  lv_object.h  lv_palette.c  lv_palette.h  (+21 more)
po/: ChangeLog  LINGUAS  Makefile  Makefile.in.in  Makevars  POTFILES.in  af.po  ar.po  ast.po  audacious.pot  be.po  bg.po  bmp.pot  br.gmo  br.po  ca.po  cmn.po  cs.gmo  cs.po  cy.gmo  cy.po  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.po  eo.po  es.gmo  es.po  es_AR.po  es_MX.po  et.po  eu.po  fa_IR.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.po  (+58 more)
skin/: Makefile  Makefile.am  Makefile.in  PLEDIT.txt  README.txt  VISCOLOR.txt  WINAMPMB.txt  pLedit.txt  pledit.txt  readme.txt  skin.hints  vIscolor.txt  viscolor.txt
src/: Makefile  config.h.meson  meson.build
src/audacious/: Makefile  actions-equalizer.h  actions-mainwin.h  actions-playlist.h  actions.c  adder.c  af_compat.h  af_equalizer.c  api-alias-begin.h  api-alias-end.h  api-declare-begin.h  api-declare-end.h  api-define-begin.h  api-define-end.h  api-local-begin.h  api-local-end.h  api.h  art.c  audacious.desktop.in  audacious.manifest  audacious.pro  audacious.rc  audacious_logo.xpm  audconfig.c  audconfig.h  auddrct.c  auddrct.h  audio.c  audio.h  bmpconfig.c  bmpconfig.h  build_stamp.c  build_stamp.h  chardet.c  chardet.h  compatibility.h  config.c  configdb-api.h  configdb.c  configdb.h  (+248 more)
src/audtool/: Makefile  audtool.c  audtool.h  audtool_handlers_equalizer.c  audtool_handlers_general.c  audtool_handlers_playback.c  audtool_handlers_playlist.c  audtool_handlers_playqueue.c  audtool_handlers_test.c  audtool_handlers_vitals.c  audtool_main.c  audtool_report.c  handlers.c  handlers_equalizer.c  handlers_general.c  handlers_playback.c  handlers_playlist.c  handlers_playqueue.c  handlers_vitals.c  main.c  meson.build  report.c  wrappers.c  wrappers.h
src/dbus/: Makefile  aud-dbus.xml  meson.build
src/intl/: Makefile  localealias.c
src/libSAD/: Makefile  SFMT-alti.h  SFMT-params.h  SFMT-params19937.h  SFMT-sse2.h  SFMT.c  SFMT.h  common.h  debug.h  dither.c  dither.h  dither_ops.c  dither_ops.h  libSAD.h  noicegen.c  noicegen.h  noisegen.h
src/libaudacious/: Makefile  beepctrl.c  beepctrl.h  configdb.h  configdb_gconf.c  configdb_libmcs.c  configdb_rcfile.c  dirbrowser.c  titlestring.c  urldecode.c  util.c
src/libaudacious++/: Makefile  README  configdb.cxx  plugin.h
src/libaudaciousng/: Makefile
src/libaudclient/: Makefile  audctrl.c  audctrl.h
(+2101 files in other folders)
