option('dbus', type: 'boolean', value: true,
       description: 'Whether D-Bus support is enabled')
option('qt', type: 'boolean', value: true,
       description: 'Whether Qt support is enabled')
option('qt5', type: 'boolean', value: false,
       description: 'Whether Qt 5 support is enabled')
option('gtk', type: 'boolean', value: true,
       description: 'Whether GTK support is enabled')
option('gtk3', type: 'boolean', value: false,
       description: 'Whether GTK 3 support is enabled')
option('libarchive', type: 'boolean', value: false,
       description: 'Whether libarchive support is enabled')
option('buildstamp', type: 'string', value: 'unknown build',
       description: 'Allows to set a custom build stamp')
option('valgrind', type: 'boolean', value: false,
       description: 'Whether Valgrind analysis support is enabled')
