skindir = $(pkgdatadir)/Skins/Default
skin_DATA = \
PLEDIT.txt \
README.txt \
VISCOLOR.txt \
WINAMPMB.txt \
Eqclose.cur \
Eqslid.cur \
Mainmenu.cur \
Mmenu.cur \
Pclose.cur \
Posbar.cur \
Ptbar.cur \
Pwinbut.cur \
Pwssize.cur \
Titlebar.cur \
Winbut.cur \
Wsposbar.cur \
Eqnormal.cur \
Eqtitle.cur \
Min.cur \
Normal.cur \
Pnormal.cur \
Psize.cur \
Pvscroll.cur \
Pwsnorm.cur \
Songname.cur \
Volbal.cur \
Wsnormal.cur \
Close.ani \
Min.ani \
AMAROK.bmp \
BALANCE.bmp \
EQMAIN.bmp \
GEN.bmp \
MAIN.bmp \
MBINNER.bmp \
MONOSTER.bmp \
NUMS_EX.bmp \
PLEDIT.bmp \
SHUFREP.bmp \
TITLEBAR.bmp \
VIDEO.bmp \
AVS.bmp \
CBUTTONS.bmp \
EQ_EX.bmp \
GENEX.bmp \
MB.bmp \
MIKRO.bmp \
NUMBERS.bmp \
PLAYPAUS.bmp \
POSBAR.bmp \
TEXT.bmp \
VIDAMP.bmp \
VOLUME.bmp

EXTRA_DIST = $(skin_DATA)
