skindir = $(pkgdatadir)/Skins/Default
skin_DATA = \
	balance.bmp		\
	cbuttons.bmp		\
	eq_ex.bmp		\
	eqmain.bmp		\
	main.bmp		\
	monoster.bmp		\
	nums_ex.bmp		\
	playpaus.bmp		\
	pledit.bmp		\
	posbar.bmp		\
	shufrep.bmp		\
	text.bmp		\
	titlebar.bmp		\
	volume.bmp		\
	pledit.txt		\
	viscolor.txt

EXTRA_DIST = $(skin_DATA)
