skindir = $(pkgdatadir)/Skins/Default
skin_DATA = \
	balance.png		\
	cbuttons.png		\
	eq_ex.png		\
	eqmain.png		\
	main.png		\
	monoster.png		\
	nums_ex.png		\
	playpaus.png		\
	pledit.png		\
	posbar.png		\
	shufrep.png		\
	text.png		\
	titlebar.png		\
	volume.png		\
	pledit.txt		\
	viscolor.txt

EXTRA_DIST = $(skin_DATA)
